--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
   <main>
     <div class="bg">
-      <img src="./images/illustration-hero.svg" class="hero">
+      <img src="./images/illustration-hero.svg" class="hero" alt="girl image">
       <h2>Order Summary</h2>
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
       device anywhere you like!</p>
       <div class="block-plan">
         <div class="left">
-          <img src="./images/icon-music.svg" class="icon-music">
+          <img src="./images/icon-music.svg" class="icon-music" alt="musical note">
             <div>
               <span class="plan">Annual Plan</span>
               <span class="price">$59.99/year</span>
